# jvmquake

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  Makefile.am  NOTICE  README.md  configure.ac  jvmquake.c  tox.ini
debian/: changelog  control
dockerfiles/: Dockerfile.java8.bionic  Dockerfile.xenial
dockerfiles/packaging/: Dockerfile
dockerfiles/test/: Dockerfile  Dockerfile.centos  Dockerfile.ubuntu  Dockerfile.ubuntu.minimal  Dockerfile.ubuntu.zulu  Dockerfile.ubuntu.zulu.minimal
notebooks/: debt_visualizer.ipynb  gclog  gclog_jvmquake  gclog_nojvmquake
packaging/debian/: changelog  control  jvmquake.install
src/: Makefile  Makefile.am  jvmquake.c
tests/: EasyNonOOM.java  EasyOOM.java  EasyThreadOOM.java  Makefile  SlowDeathOOM.java  environment.py  run_smoke_test.sh  run_tests.sh  test_basic_ooms.py  test_easy_oom.py  test_hard_ooms.py  test_java_opts.py  test_non_ooms.py
